# scripts

./: .gitignore  .webui_secret_key  404.html  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  albumplayer.xsh  ansi-cheatsheet.sh  ardour-open.sh  chatgpt-all-scripts-describer.py  citeboard.sh  colormap_from_text.sh  command_prompt.sh  count_tokens_with_tiktoken.py  create_cover_art.sh  desk_fzf.sh  dmenu_run_scripts.py  dmenu_run_scripts.xsh  edit_chezmoi_cfg_files.sh  editor.sh  flexoki_show.sh  fzf-file-manager.sh  fzf_albumlauncher.xsh  fzf_songlauncher.sh  fzfmenu.sh  fzfmenu_run.sh  generate_commit_message.sh  get_hyperlinks_in_folder.py  get_repos_present_on_host.sh  get_scripts_relations.py  git_cd.sh  git_clone_by_author-repo.sh  git_update_all_other_repos.sh  grub-tune-to-audio-python.py  improved-fzfmenu.sh  index.html  install_dependencies.sh  json_to_markdown.py  jupyter_new_notebook.xsh  (+62 more)
archived/: album_email.py  albumplayer.sh  albums_to_listen.py  chatgpt-all-scripts-describer.py  color-jpg-to-svg-converter.sh  dmenu_run_scripts.xsh  fd_exec_path.sh  fzf_path_processor.sh  fzfmenu-run-script.sh  import_volca_folder.sh  karjala_screen.xsh  launcher.sh  llama-script-describer.py  mutopia.py  obsidian.sh  ollama_list.py  ollama_list_fancy.py  playlist_updater.xsh  quickcommand.sh  script_identifier.xsh  script_info.csv  single-jpg-to-svg-converter.sh  sync-localdata-repo.sh  sync-repo-general.sh  sync-scripts-repo.sh  urxvt-font-switch.xsh  volca.py  whatkey.py  zz_readpaper.sh
config/: tmux_sessions.yaml
dev/: cmd.py  (+50 more)
lib/snekai/: pyproject.toml  snekai.sh
(+486 files in other folders)
